--- a/index.html
+++ b/index.html
@@ -255,9 +255,17 @@
     <div class="card">
       <h2>Latest Updates</h2>
       <ul id="updatesList">
-        <li><strong>Oct 3, 2025:</strong> 120 relief packs distributed in Barangay Gairan.</li>
-        <li><strong>Oct 2, 2025:</strong> Volunteers cleared debris near Bogo City Hall.</li>
-        <li><strong>Oct 1, 2025:</strong> Power restoration underway across Bogo.</li>
+
+  <li><strong>Oct 3, 2025:</strong> The national government released ₱1.625 billion to boost relief and recovery operations in Cebu. <em>(The Manila Times)</em></li>
+  <li><strong>Oct 3, 2025:</strong> The President pledged ₱150 million in aid for quake-affected areas. <em>(Philstar)</em></li>
+  <li><strong>Oct 3, 2025:</strong> The PCSO mobilized relief goods and evacuation kits via Coast Guard vessels and flights. <em>(Philippine News Agency)</em></li>
+  <li><strong>Oct 3, 2025:</strong> Singapore Red Cross committed SGD 50,000 (≈ ₱2.2 million) to support medical, hygiene, and psychosocial relief efforts. <em>(GMA Network)</em></li>
+  <li><strong>Oct 3, 2025:</strong> Local governments and agencies deployed over 113,000 relief items (water, rice packs, food packs, hygiene kits) to northern Cebu towns including Bogo. <em>(SunStar Publishing Inc.)</em></li>
+  <li><strong>Oct 3, 2025:</strong> The government declared state of calamity for affected municipalities (Bogo, San Remigio, Tabuelan, Medellin) to facilitate faster release of funds and aid. <em>(Philippine Information Agency)</em></li>
+  <li><strong>Oct 3, 2025:</strong> Repair and restoration efforts: power is being restored in Bogo City. <em>(Philippine Commission on Orders)</em></li>
+  <li><strong>Oct 3, 2025:</strong> Authorities clarified that no permit is required for individuals/groups transporting relief goods to northern Cebu—aid delivery is encouraged. <em>(GMA Network)</em></li>
+
+
       </ul>
     </div>
   </section>
@@ -268,5 +276,6 @@
   </footer>
 </body>
 </html>
+
 
 
