--- a/index.html
+++ b/index.html
@@ -322,19 +322,15 @@ window.addEventListener("DOMContentLoaded", async () => {
   <section id="updates">
     <div class="card">
       <h2>Latest Updates</h2>
-      <ul id="updatesList">
+ <ul id="updatesList">
+  <li><strong>Oct 4, 2025:</strong> Only 14% of Bogo City’s power supply has been restored; electricity is still down in many areas. <em>(The Freeman)</em></li>
+  <li><strong>Oct 4, 2025:</strong> Approximately 5,013 houses damaged: 658 destroyed, 4,355 partially damaged. <em>(ReliefWeb)</em></li>
+  <li><strong>Oct 4, 2025:</strong> Over 335 public and private infrastructures damaged, including roads, bridges, and government buildings. <em>(ReliefWeb)</em></li>
+  <li><strong>Oct 4, 2025:</strong> Three medical teams deployed to Bogo City to assist affected residents. <em>(Philippine Information Agency)</em></li>
+  <li><strong>Oct 4, 2025:</strong> Philippine Red Cross launched an emergency appeal for additional relief support. <em>(ReliefWeb)</em></li>
+  <li><strong>Oct 4, 2025:</strong> Rehabilitation plans underway for damaged heritage sites, including the Shrine of the Archdiocese of San Vicente Ferrer. <em>(PNA)</em></li>
+</ul>
 
-  <li><strong>Oct 3, 2025:</strong> The national government released ₱1.625 billion to boost relief and recovery operations in Cebu. <em>(The Manila Times)</em></li>
-  <li><strong>Oct 3, 2025:</strong> The President pledged ₱150 million in aid for quake-affected areas. <em>(Philstar)</em></li>
-  <li><strong>Oct 3, 2025:</strong> The PCSO mobilized relief goods and evacuation kits via Coast Guard vessels and flights. <em>(Philippine News Agency)</em></li>
-  <li><strong>Oct 3, 2025:</strong> Singapore Red Cross committed SGD 50,000 (≈ ₱2.2 million) to support medical, hygiene, and psychosocial relief efforts. <em>(GMA Network)</em></li>
-  <li><strong>Oct 3, 2025:</strong> Local governments and agencies deployed over 113,000 relief items (water, rice packs, food packs, hygiene kits) to northern Cebu towns including Bogo. <em>(SunStar Publishing Inc.)</em></li>
-  <li><strong>Oct 3, 2025:</strong> The government declared state of calamity for affected municipalities (Bogo, San Remigio, Tabuelan, Medellin) to facilitate faster release of funds and aid. <em>(Philippine Information Agency)</em></li>
-  <li><strong>Oct 3, 2025:</strong> Repair and restoration efforts: power is being restored in Bogo City. <em>(Philippine Commission on Orders)</em></li>
-  <li><strong>Oct 3, 2025:</strong> Authorities clarified that no permit is required for individuals/groups transporting relief goods to northern Cebu—aid delivery is encouraged. <em>(GMA Network)</em></li>
-
-
-      </ul>
     </div>
   </section>
 
@@ -344,6 +340,7 @@ window.addEventListener("DOMContentLoaded", async () => {
   </footer>
 </body>
 </html>
+
 
 
 
